// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`banner/BannerPresenter/BannerPresenter renders with a fragment as actions 1`] = `
<div
  aria-label={undefined}
  aria-labelledby={undefined}
  aria-live="polite"
  className="hig__banner hig__banner--primary hig__banner--interactive hig--light-theme"
  role="alert"
>
  <figure
    className="hig__banner__icon-background hig--light-theme"
  >
    <div
      className="hig__icon hig__icon--24-size"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\" role=\\"img\\" title=\\"info-24\\"><path d=\\"M12,2A10,10,0,1,0,22,12,10,10,0,0,0,12,2Zm0,19a9,9,0,1,1,9-9A9,9,0,0,1,12,21Z\\"/><rect x=\\"11\\" y=\\"11\\" width=\\"2\\" height=\\"6\\"/><circle cx=\\"12\\" cy=\\"8\\" r=\\"1.25\\"/></svg>",
        }
      }
    />
  </figure>
  <div
    className="hig__banner__content"
  >
    <p
      className="hig__banner__message"
    >
      <span
        className="hig__typography hig__typography__text hig__typography--hig-cool-gray-70"
        style={Object {}}
      >
        Message
      </span>
    </p>
    <div
      className="hig__banner__interactions-wrapper"
    >
      <span>
        bar
      </span>
      <div>
        baz
      </div>
    </div>
  </div>
  <div
    className="hig__banner__dismiss-button"
  >
    <button
      className="hig__icon-button hig__icon-button--transparent"
      onBlur={undefined}
      onClick={undefined}
      onFocus={undefined}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      title="Dismiss"
    >
      <span
        className="hig__icon-button__icon"
      >
        <div
          className="hig__icon hig__icon--24-size"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 16 16\\" role=\\"img\\" title=\\"close-notification-24\\"><polygon points=\\"11.4,5.4 10.6,4.6 8,7.3 5.4,4.6 4.6,5.4 7.3,8 4.6,10.6 5.4,11.4 8,8.7 10.6,11.4 11.4,10.6 8.7,8\\"/></svg>",
            }
          }
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`banner/BannerPresenter/BannerPresenter renders with a label 1`] = `
<div
  aria-label="HELLO"
  aria-labelledby={undefined}
  aria-live="assertive"
  className="hig__banner hig__banner--urgent hig--light-theme"
  role="alert"
>
  <figure
    className="hig__banner__icon-background hig--light-theme"
  >
    <div
      className="hig__icon hig__icon--24-size"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\" role=\\"img\\" title=\\"error-24\\"><polygon points=\\"16.74 7.96 16.04 7.26 12 11.29 7.96 7.26 7.26 7.96 11.29 12 7.26 16.04 7.96 16.74 12 12.71 16.04 16.74 16.74 16.04 12.71 12 16.74 7.96\\"/><path d=\\"M12,2A10,10,0,1,0,22,12,10,10,0,0,0,12,2Zm0,19a9,9,0,1,1,9-9A9,9,0,0,1,12,21Z\\"/></svg>",
        }
      }
    />
  </figure>
  <div
    className="hig__banner__content"
  >
    <p
      className="hig__banner__message"
    >
      <span
        className="hig__typography hig__typography__text hig__typography--hig-cool-gray-70"
        style={Object {}}
      >
        World
      </span>
    </p>
  </div>
  <div
    className="hig__banner__dismiss-button"
  >
    <button
      className="hig__icon-button hig__icon-button--transparent"
      onBlur={undefined}
      onClick={undefined}
      onFocus={undefined}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      title="Dismiss"
    >
      <span
        className="hig__icon-button__icon"
      >
        <div
          className="hig__icon hig__icon--24-size"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 16 16\\" role=\\"img\\" title=\\"close-notification-24\\"><polygon points=\\"11.4,5.4 10.6,4.6 8,7.3 5.4,4.6 4.6,5.4 7.3,8 4.6,10.6 5.4,11.4 8,8.7 10.6,11.4 11.4,10.6 8.7,8\\"/></svg>",
            }
          }
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`banner/BannerPresenter/BannerPresenter renders with a node as actions 1`] = `
<div
  aria-label={undefined}
  aria-labelledby={undefined}
  aria-live="polite"
  className="hig__banner hig__banner--primary hig__banner--interactive hig--light-theme"
  role="alert"
>
  <figure
    className="hig__banner__icon-background hig--light-theme"
  >
    <div
      className="hig__icon hig__icon--24-size"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\" role=\\"img\\" title=\\"info-24\\"><path d=\\"M12,2A10,10,0,1,0,22,12,10,10,0,0,0,12,2Zm0,19a9,9,0,1,1,9-9A9,9,0,0,1,12,21Z\\"/><rect x=\\"11\\" y=\\"11\\" width=\\"2\\" height=\\"6\\"/><circle cx=\\"12\\" cy=\\"8\\" r=\\"1.25\\"/></svg>",
        }
      }
    />
  </figure>
  <div
    className="hig__banner__content"
  >
    <p
      className="hig__banner__message"
    >
      <span
        className="hig__typography hig__typography__text hig__typography--hig-cool-gray-70"
        style={Object {}}
      >
        Message
      </span>
    </p>
    <div
      className="hig__banner__interactions-wrapper"
    >
      <span>
        foo
      </span>
    </div>
  </div>
  <div
    className="hig__banner__dismiss-button"
  >
    <button
      className="hig__icon-button hig__icon-button--transparent"
      onBlur={undefined}
      onClick={undefined}
      onFocus={undefined}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      title="boom"
    >
      <span
        className="hig__icon-button__icon"
      >
        <div
          className="hig__icon hig__icon--24-size"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 16 16\\" role=\\"img\\" title=\\"close-notification-24\\"><polygon points=\\"11.4,5.4 10.6,4.6 8,7.3 5.4,4.6 4.6,5.4 7.3,8 4.6,10.6 5.4,11.4 8,8.7 10.6,11.4 11.4,10.6 8.7,8\\"/></svg>",
            }
          }
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`banner/BannerPresenter/BannerPresenter renders with a string as actions 1`] = `
<div
  aria-label={undefined}
  aria-labelledby={undefined}
  aria-live="polite"
  className="hig__banner hig__banner--primary hig__banner--interactive hig--light-theme"
  role="alert"
>
  <figure
    className="hig__banner__icon-background hig--light-theme"
  >
    <div
      className="hig__icon hig__icon--24-size"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\" role=\\"img\\" title=\\"info-24\\"><path d=\\"M12,2A10,10,0,1,0,22,12,10,10,0,0,0,12,2Zm0,19a9,9,0,1,1,9-9A9,9,0,0,1,12,21Z\\"/><rect x=\\"11\\" y=\\"11\\" width=\\"2\\" height=\\"6\\"/><circle cx=\\"12\\" cy=\\"8\\" r=\\"1.25\\"/></svg>",
        }
      }
    />
  </figure>
  <div
    className="hig__banner__content"
  >
    <p
      className="hig__banner__message"
    >
      <span
        className="hig__typography hig__typography__text hig__typography--hig-cool-gray-70"
        style={Object {}}
      >
        Message
      </span>
    </p>
    <div
      className="hig__banner__interactions-wrapper"
    >
      foobar
    </div>
  </div>
  <div
    className="hig__banner__dismiss-button"
  >
    <button
      className="hig__icon-button hig__icon-button--transparent"
      onBlur={undefined}
      onClick={undefined}
      onFocus={undefined}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      title="Dismiss"
    >
      <span
        className="hig__icon-button__icon"
      >
        <div
          className="hig__icon hig__icon--24-size"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 16 16\\" role=\\"img\\" title=\\"close-notification-24\\"><polygon points=\\"11.4,5.4 10.6,4.6 8,7.3 5.4,4.6 4.6,5.4 7.3,8 4.6,10.6 5.4,11.4 8,8.7 10.6,11.4 11.4,10.6 8.7,8\\"/></svg>",
            }
          }
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`banner/BannerPresenter/BannerPresenter renders without props 1`] = `
<div
  aria-label={undefined}
  aria-labelledby={undefined}
  aria-live="polite"
  className="hig__banner hig__banner--primary hig--light-theme"
  role="alert"
>
  <figure
    className="hig__banner__icon-background hig--light-theme"
  >
    <div
      className="hig__icon hig__icon--24-size"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\" role=\\"img\\" title=\\"info-24\\"><path d=\\"M12,2A10,10,0,1,0,22,12,10,10,0,0,0,12,2Zm0,19a9,9,0,1,1,9-9A9,9,0,0,1,12,21Z\\"/><rect x=\\"11\\" y=\\"11\\" width=\\"2\\" height=\\"6\\"/><circle cx=\\"12\\" cy=\\"8\\" r=\\"1.25\\"/></svg>",
        }
      }
    />
  </figure>
  <div
    className="hig__banner__content"
  >
    <p
      className="hig__banner__message"
    >
      <span
        className="hig__typography hig__typography__text hig__typography--hig-cool-gray-70"
        style={Object {}}
      >
        Message
      </span>
    </p>
  </div>
  <div
    className="hig__banner__dismiss-button"
  >
    <button
      className="hig__icon-button hig__icon-button--transparent"
      onBlur={undefined}
      onClick={undefined}
      onFocus={undefined}
      onMouseEnter={undefined}
      onMouseLeave={undefined}
      title="Dismiss"
    >
      <span
        className="hig__icon-button__icon"
      >
        <div
          className="hig__icon hig__icon--24-size"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 16 16\\" role=\\"img\\" title=\\"close-notification-24\\"><polygon points=\\"11.4,5.4 10.6,4.6 8,7.3 5.4,4.6 4.6,5.4 7.3,8 4.6,10.6 5.4,11.4 8,8.7 10.6,11.4 11.4,10.6 8.7,8\\"/></svg>",
            }
          }
        />
      </span>
    </button>
  </div>
</div>
`;
